@@ -1,10 +1,52 @@
-# DuckHunt-Game
-This project is made by JavaFx.
-This is my first game project in my first year at the Hacettepe University Computer Science department.
-It may sound familiar to you as an Atari game at the beginning of the 21st century.
+# DuckHunt Game 🎯🦆
 
-You can start the game by using this command:
+A simple **Duck Hunt** clone built with **Java** and **JavaFX**, where players try to shoot ducks before they fly off the screen. Inspired by the classic NES game, this project demonstrates basic game development concepts using JavaFX.
 
-first comply: javac DuckHunt.java
+## 🎮 Features
 
-then start the game: java DuckHunt
+- 🦆 Moving duck animations  
+- 🎯 Click-based shooting mechanic  
+- 📈 Score tracking  
+- ⏱️ Timer system for each round  
+- 🔁 Restart functionality  
+- 🎨 Simple and intuitive JavaFX UI  
+
+## 🛠️ Technologies Used
+
+- **Java 17+**  
+- **JavaFX SDK**  
+- **Scene Builder** (optional, for UI design)
+
+## 🚀 Getting Started
+
+### Prerequisites
+
+Make sure you have the following installed on your machine:
+
+- [Java JDK 17+](https://www.oracle.com/java/technologies/javase-downloads.html)  
+- [JavaFX SDK](https://openjfx.io/)  
+- An IDE like **IntelliJ IDEA**, **Eclipse**, or **VS Code** with JavaFX configured
+
+### Running the Project
+
+1. **Clone the repository:**
+
+   ```bash
+   git clone https://github.com/UfukCefaker/DuckHunt-Game.git
+   cd DuckHunt-Game
+2.  **Import the project into your IDE**
+  You can import it as a standard Java project. Maven is not required.
+
+3.  **Configure JavaFX SDK:**
+
+  If your IDE requires VM options, set them as:
+  ```bash
+--module-path /path/to/javafx-sdk-17/lib --add-modules javafx.controls,javafx.fxml
+  ```
+
+4.  **Run the Application:**
+
+The main class is located at:
+  ```bash
+src/main/java/duckhunt/Main.java
+  ```
